# google-adk-litellm-pydanticai-supabase

./: .env  README.md  main.py  pyproject.toml  supabase-test.py
